# Larik

./: .editorconfig  README.md  _blas.py  blas.py  buffer_cpu.py  setup.py  testing.py
_core/: CMakeLists.txt  setup.py  test.py
_core/include/: tensor.hpp
_core/src/: bindings.cc  main.cc
larik/: __init__.py  _dtype.py  helpers.py  larik.py
tests/: test.py  test_init.py  test_ops.py
